--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
@@ -119,6 +119,10 @@
     <Reference Include="UISystem">
       <HintPath>..\..\..\ThirdParty\NeoAxis\UISystem.dll</HintPath>
     </Reference>
+    <Reference Include="UpdateControls.XAML, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.XAML.dll</HintPath>
+    </Reference>
     <Reference Include="Utils">
       <HintPath>..\..\..\ThirdParty\NeoAxis\Utils.dll</HintPath>
     </Reference>
@@ -164,13 +168,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\WorldMap.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Strive.Client.Model\Strive.Client.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Client.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Strive.Client.ViewModel\Strive.Client.ViewModel.csproj">
       <Project>{5092DF71-BFDA-44A0-9C7B-F4C4A5CE7E2B}</Project>
       <Name>Strive.Client.ViewModel</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\WorldMap.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
