--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -45,13 +45,17 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityViewModel.cs" />
     <Compile Include="InputBindings.cs" />
     <Compile Include="Perspective.cs" />
-    <Compile Include="WorldViewModel.cs" />
-    <Compile Include="ViewEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorldViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
+      <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
+      <Name>Strive.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Math3D\Strive.Math3D.csproj">
       <Project>{14818E27-DABB-4332-B572-21BA9983D886}</Project>
       <Name>Strive.Math3D</Name>
@@ -60,13 +64,17 @@
       <Project>{8C36C1BE-AB5F-47A5-869D-139A04B23C52}</Project>
       <Name>Strive.Network.Client</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messages\Strive.Network.Messages.csproj">
-      <Project>{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}</Project>
-      <Name>Strive.Network.Messages</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Server\Strive.Server.Model\Strive.Server.Model.csproj">
       <Project>{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}</Project>
       <Name>Strive.Server.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Strive.Client.Model\Strive.Client.Model.csproj">
+      <Project>{81F8F1E4-640B-45B7-9000-072D4C96F8A0}</Project>
+      <Name>Strive.Client.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Strive.Client.NavigationModel\Strive.Client.NavigationModel.csproj">
+      <Project>{AE84FA6A-0A67-41B1-A899-BBA21ED39E1A}</Project>
+      <Name>Strive.Client.NavigationModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
