--- a/Source/Strive/Strive.Client/Strive.Client.WPF/Strive.Client.WPF.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/Strive.Client.WPF.csproj
@@ -218,6 +218,9 @@
     <Compile Include="ResourceList.xaml.cs">
       <DependentUpon>ResourceList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WebBrowser.xaml.cs">
+      <DependentUpon>WebBrowser.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WorldView.xaml.cs">
       <DependentUpon>WorldView.xaml</DependentUpon>
     </Compile>
@@ -234,6 +237,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="ResourceList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WebBrowser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
