Fixed! using neoWPF

--- a/Source/Strive/Strive.Server/Strive.Server.WindowsService/Strive.Server.WindowsService.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.WindowsService/Strive.Server.WindowsService.csproj
@@ -138,7 +138,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Strive.Server.Logic\Strive.Server.Logic.csproj">
