--- a/Source/Strive/Strive.Server/Strive.Server.WPF/Strive.Server.WPF.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.WPF/Strive.Server.WPF.csproj
@@ -174,6 +174,10 @@
       <Project>{790D523A-8C3C-480F-885B-C476238FB438}</Project>
       <Name>Strive.WPF</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Strive.Server.Logic\Strive.Server.Logic.csproj">
+      <Project>{4895086D-8485-46EF-8DED-9E4C16227D64}</Project>
+      <Name>Strive.Server.Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
