--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -55,42 +55,42 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\UnitModel.cs" />
-    <Compile Include="Model\FactoryModel.cs" />
-    <Compile Include="Model\LogModel.cs" />
-    <Compile Include="Model\ServerStatusModel.cs" />
+    <Compile Include="UnitModel.cs" />
+    <Compile Include="FactoryModel.cs" />
+    <Compile Include="LogModel.cs" />
+    <Compile Include="ServerStatusModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\UnitViewModel.cs" />
-    <Compile Include="ViewModel\FactoryViewModel.cs" />
-    <Compile Include="ViewModel\LogViewModel.cs" />
-    <Compile Include="ViewModel\ServerStatusViewModel.cs" />
-    <Compile Include="View\UnitView.xaml.cs">
+    <Compile Include="UnitViewModel.cs" />
+    <Compile Include="FactoryViewModel.cs" />
+    <Compile Include="LogViewModel.cs" />
+    <Compile Include="ServerStatusViewModel.cs" />
+    <Compile Include="UnitView.xaml.cs">
       <DependentUpon>UnitView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\FactoryView.xaml.cs">
+    <Compile Include="FactoryView.xaml.cs">
       <DependentUpon>FactoryView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ServerStatusView.xaml.cs">
+    <Compile Include="ServerStatusView.xaml.cs">
       <DependentUpon>ServerStatusView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\LogView.xaml.cs">
+    <Compile Include="LogView.xaml.cs">
       <DependentUpon>LogView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="View\UnitView.xaml">
+    <Page Include="UnitView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\FactoryView.xaml">
+    <Page Include="FactoryView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\ServerStatusView.xaml">
+    <Page Include="ServerStatusView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\LogView.xaml">
+    <Page Include="LogView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
