--- a/Source/Strive/Strive.Server/Strive.Server.Model/Strive.Server.Model.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Model/Strive.Server.Model.csproj
@@ -93,6 +93,10 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
+    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs">
@@ -124,6 +128,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Schema.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ServerStatusModel.cs" />
     <Compile Include="Terrain.cs">
       <SubType>Code</SubType>
     </Compile>
