--- a/Source/Strive/Strive.WPF/Strive.WPF.csproj
+++ b/Source/Strive/Strive.WPF/Strive.WPF.csproj
@@ -55,38 +55,36 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ResourceList.xaml.cs">
+      <DependentUpon>ResourceList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UnitModel.cs" />
     <Compile Include="FactoryModel.cs" />
     <Compile Include="LogModel.cs" />
-    <Compile Include="ServerStatusModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitViewModel.cs" />
     <Compile Include="FactoryViewModel.cs" />
     <Compile Include="LogViewModel.cs" />
-    <Compile Include="ServerStatusViewModel.cs" />
     <Compile Include="UnitView.xaml.cs">
       <DependentUpon>UnitView.xaml</DependentUpon>
     </Compile>
     <Compile Include="FactoryView.xaml.cs">
       <DependentUpon>FactoryView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ServerStatusView.xaml.cs">
-      <DependentUpon>ServerStatusView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="LogView.xaml.cs">
       <DependentUpon>LogView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ResourceList.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="UnitView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="FactoryView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="ServerStatusView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
