--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -39,6 +40,14 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UpdateControls, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.dll</HintPath>
+    </Reference>
+    <Reference Include="UpdateControls.XAML, Version=2.1.1.0, Culture=neutral, PublicKeyToken=19e83a8289e31a8f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\ThirdParty\UpdateControls\UpdateControls.XAML.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
@@ -53,10 +62,6 @@
     <ProjectReference Include="..\..\Strive.Common\Strive.Common.csproj">
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Strive.Math3D\Strive.Math3D.csproj">
-      <Project>{14818E27-DABB-4332-B572-21BA9983D886}</Project>
-      <Name>Strive.Math3D</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Strive.Network\Strive.Network.Client\Strive.Network.Client.csproj">
       <Project>{8C36C1BE-AB5F-47A5-869D-139A04B23C52}</Project>
