--- a/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
@@ -73,11 +73,6 @@
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Strive.Math3D\Strive.Math3D.csproj">
-      <Name>Strive.Math3D</Name>
-      <Project>{14818E27-DABB-4332-B572-21BA9983D886}</Project>
-      <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
-    </ProjectReference>
     <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messages\Strive.Network.Messages.csproj">
       <Name>Strive.Network.Messages</Name>
       <Project>{EEEC18D5-063D-4DDD-8328-5182F1BA7F26}</Project>
@@ -98,6 +93,7 @@
     <Reference Include="Common.Logging.Log4Net">
       <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.Log4Net.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
