--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -65,9 +65,9 @@
       <Project>{FCB073C1-253E-46D8-BCE4-79B1C1616058}</Project>
       <Name>Strive.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Strive.Network\Strive.Network.Client\Strive.Network.Client.csproj">
-      <Project>{8C36C1BE-AB5F-47A5-869D-139A04B23C52}</Project>
-      <Name>Strive.Network.Client</Name>
+    <ProjectReference Include="..\..\Strive.Network\Strive.Network.Messaging\Strive.Network.Messaging.csproj">
+      <Project>{757BF7D3-B811-48D7-AE27-0842B0522536}</Project>
+      <Name>Strive.Network.Messaging</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Strive.Server\Strive.Server.Model\Strive.Server.Model.csproj">
       <Project>{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}</Project>
